--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -68,6 +68,10 @@ Then, add the following to your `tsconfig.json`:
 
 To check that the plugin is working, create a `.ts` file and import an Astro component into it. You should have no warning messages from your editor.
 
+:::note
+The `jsx` setting specifies what JSX code is generated. You may have to change it depending on the particular framework you are using. For example, SolidJS users may prefer the "preserve" option. For plain Astro projects, "react" works well. Valid values are "preserve", "react", "react-jsx", "react-jsdev" and "react-native".
+:::
+
 ### UI Frameworks
 
 If your project uses a [UI framework](/en/core-concepts/framework-components/), additional settings depending on the framework might be needed. Please see your framework's TypeScript documentation for more information. ([Vue](https://vuejs.org/guide/typescript/overview.html#using-vue-with-typescript), [React](https://reactjs.org/docs/static-type-checking.html), [Preact](https://preactjs.com/guide/v10/typescript), [Solid](https://www.solidjs.com/guides/typescript))
