--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -41,7 +41,7 @@ export default defineConfig({
 
 Create a new folder `src/assets/` which Astro will recogize as your new assets folder.
 
-We **strongly recommend** storing all local images in the `src/assets/` directory. This location is optional for now, but may become the required location for all asset types in the future.
+We **strongly recommend** storing all images to be optimized in the `src/assets/` directory. This location is optional for now, but may become the required location for all asset types in the future.
 
 Your images stored in `src/assets/` can be used by components (`.astro`, `.mdx` and other UI frameworks) and in Markdown files.
 
