--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -39,7 +39,7 @@ export default defineConfig({
 
 ### Move your images to `src/assets/`
 
-Create a new folder `src/assets/` which Astro will recogize as your new assets folder.
+Create an `src/assets/` folder, which Astro will recognize as your new assets folder.
 
 We **strongly recommend** storing all images to be optimized in the `src/assets/` directory. This location is optional for now, but may become the required location for all asset types in the future.
 
