--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -43,7 +43,7 @@ Create an `src/assets/` folder, which Astro will recognize as your new assets fo
 
 We **strongly recommend** storing all images to be optimized in the `src/assets/` directory. This location is optional for now, but may become the required location for all asset types in the future.
 
-Your images stored in `src/assets/` can be used by components (`.astro`, `.mdx` and other UI frameworks) and in Markdown files.
+Your images stored in `src/assets/` can be used by components (`.astro`, `.mdx`, and other UI frameworks) and in Markdown files.
 
 ### Update existing `<img>` tags
 
@@ -75,7 +75,7 @@ Relative images can now be referenced in Markdown and MDX files. These will auto
 
 This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory or move them near your Markdown files. (See the URL path of these built images in the example below.)
 
-Your existing images in `public/` and remote images are still valid, but are not automatically optimized by Astro's build process.
+Your existing images in `public/` and remote images are still valid but are not automatically optimized by Astro's build process.
 
 ```md title="src/pages/posts/post-1.md" "/_astro" ".hash" "../../assets/"
 # My Markdown Page
@@ -101,7 +101,7 @@ To avoid errors in your project, complete the following steps:
 
 1. Remove the `@astrojs/image` integration.
 
-    You must [remove the integration](/en/guides/integrations-guide/#removing-an-integration) by uninstalling and then removing from your `astro.config.mjs` file.
+    You must [remove the integration](/en/guides/integrations-guide/#removing-an-integration) by uninstalling and then removing it from your `astro.config.mjs` file.
 
 2. Migrate any existing `<Image />` components.
 
@@ -163,7 +163,7 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 
 The `<Image />` component generates an `<img>` tag.
 
-This component can transform an image's dimensions, file type and quality to produce an optimized image that avoids Content Layout Shift **(CLS)**.
+This component can transform an image's dimensions, file type, and quality to produce an optimized image that avoids Content Layout Shift **(CLS)**.
 
 :::tip[What is Content Layout Shift?]
 CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
@@ -253,7 +253,7 @@ import myImage from "../assets/my_image.png";
 
 This function is intended for generating images destined to be used somewhere else than directly in HTML, for example in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
 
-`getImage()` takes all the same parameters as the Image component (except `alt`).
+`getImage()` takes an options object with the same properties as the Image component (except `alt`).
 
 ```astro
 ---
