--- a/src/content/docs/es/guides/markdown-content.mdx
+++ b/src/content/docs/es/guides/markdown-content.mdx
@@ -494,9 +494,9 @@ export default defineConfig({
 
 #### Personalizando un plugin
 
-Para personalizar un plugin, proporciona un objeto de opciones después de él en una matriz anidada.
+Para personalizar un plugin, proporciona un objeto de opciones después de él en un array anidado.
 
-En el ejemplo de abajo se agrega la [opción de encabezado al plugin `remarkToc`](https://github.com/remarkjs/remark-toc#optionsheading) para cambiar dónde es colocada la tabla de contenidos y la [opción `behavior` al plugin `rehype-autolink-headings`](https://github.com/rehypejs/rehype-autolink-headings#optionsbehavior) para agregar la etiqueta de ancla después del texto del encabezado.
+En el ejemplo de abajo se agrega la [opción de encabezado al plugin `remarkToc`](https://github.com/remarkjs/remark-toc#optionsheading) para cambiar dónde es colocada la tabla de contenidos y la [opción `behavior` al plugin `rehype-autolink-headings`](https://github.com/rehypejs/rehype-autolink-headings#optionsbehavior) para agregar una etiqueta de ancla después del texto del encabezado.
 
 ```js title="astro.config.mjs"
 import remarkToc from 'remark-toc';
@@ -505,7 +505,6 @@ import rehypeSlug from 'rehype-slug';
 import rehypeAutolinkHeadings from 'rehype-autolink-headings';
 export default {
   markdown: {
-    remarkPlugins: [],
     remarkPlugins: [ [remarkToc, { heading: "contents"} ] ],
     rehypePlugins: [rehypeSlug, [rehypeAutolinkHeadings, { behavior: 'append' }]],
   },
