--- a/src/content/docs/es/guides/images.mdx
+++ b/src/content/docs/es/guides/images.mdx
@@ -144,7 +144,7 @@ También debes proporcionar [`width`](/es/guides/integrations-guide/image/#width
 
 (atributos requeridos: [`src`](/es/guides/integrations-guide/image/#src), y [`alt`](/es/guides/integrations-guide/image/#alt))
 
-Importa tu imagen en frontmatter y pásala directamente al atributo `src` del componente `<Image />`.
+Importa tu imagen en el frontmatter y pásala directamente al atributo `src` al componente `<Image />`.
 
 `alt` es requerido, pero [todas las demás propiedades](/es/guides/integrations-guide/image/#image-) son opcionales y se ajustarán de forma predeterminada a las propiedades originales del archivo de imagen si no se proporcionan.
 
@@ -225,11 +225,11 @@ Aunque [`formats`](/es/guides/integrations-guide/image/#formats) no es necesario
 
 (atributos requeridos: [`src`](/es/guides/integrations-guide/image/#src-1), [`widths`](/es/guides/integrations-guide/image/#widths), [`size`](/es/guides/integrations-guide/image/#sizes), [`alt`](/es/guides/integrations-guide/image/#alt-1)
 
-Importa tu imagen en frontmatter y pásala directamente al atributo `<Picture />` del componente `src` .
+Importa tu imagen en el frontmatter y pásala directamente al componente `<Picture />` con el atributo `src` .
 
 Debes proporcionar al componente una guía para anchos de imagen y tamaños de pantalla, pero [todas las demás propiedades](/es/guides/integrations-guide/image/#picture-) son opcionales.
 
-Por defecto, el componente `<Picture />` de [`formats`](/es/guides/integrations-guide/image/#formats) incluirá `avif` y `webp` además del formato original de la imagen si no es especificado.
+Por defecto, el componente `<Picture />` incluirá los [`formatos`](/es/guides/integrations-guide/image/#formats) `avif` y `webp` además del formato original de la imagen si no es especificado.
 
 #### Imágenes Locales en `public/`
 
