--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -14,7 +14,7 @@ The new assets experience currently features:
 - Improved error messages and types
 
 :::caution
-Assets are an _experimental_ Astro feature. This API is subject to change before it is marked as stable.
+Assets are an experimental Astro feature. This API is subject to change before it is marked as stable.
 :::
 
 ## Enabling Assets in your Project
@@ -159,7 +159,7 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 - `Image`
 - `getImage()`
 
-### `<Image />` (experimental)
+### `<Image />` (`astro:assets`)
 
 The `<Image />` component generates an `<img>` tag.
 
@@ -249,7 +249,7 @@ import myImage from "../assets/my_image.png";
 />
 ```
 
-### `getImage()`
+### `getImage()` (`astro:assets`)
 
 This function is intended for generating images destined to be used somewhere else than directly in HTML, for example in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
 
