docs: github translate

--- a/src/content/docs/zh-cn/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/zh-cn/guides/deploy/cloudflare.mdx
@@ -20,7 +20,7 @@ i18nReady: true
 
 1. 在 Cloudflare Pages 设置一个新项目。
 2. 将你的代码提交到一个 Git 仓库中 (GitHub, GitLab)。
-3. 登陆 Cloudflare 仪表盘并在 **Account Home** > **Pages** 选择你的 Github 或 Gitlab 账户。
+3. 登陆 Cloudflare 仪表盘并在 **Account Home** > **Pages** 选择你的 GitHub 或 Gitlab 账户。
 4. 选择 **Create a new Project**（创建一个新项目）和 **Connect Git**（连接 Git） 选项。
 5. 选择你想部署到 Git 项目并点击 **Begin setup**（初始设置）。
 6. 使用以下的构建设置：
