--- a/src/content/docs/es/guides/testing.mdx
+++ b/src/content/docs/es/guides/testing.mdx
@@ -24,7 +24,7 @@ Playwright es un framework de testing end-to-end para aplicaciones web modernas.
 
 Puedes empezar y ejecutar tus tests usando la [Extensión de VS Code](https://playwright.dev/docs/getting-started-vscode).
 
-Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usando el gestor de paquetes de tu elección. Sigue los pasos de la CLI para elegir JavaScript/TypeScript, el nombre de tu carpeta de tests y añadir un workflow opcional de Github Actions.
+Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usando el gestor de paquetes de tu elección. Sigue los pasos de la CLI para elegir JavaScript/TypeScript, el nombre de tu carpeta de tests y añadir un workflow opcional de GitHub Actions.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
