--- a/src/content/docs/es/guides/testing.mdx
+++ b/src/content/docs/es/guides/testing.mdx
@@ -59,7 +59,7 @@ export default defineConfig({
 
 ### Crea tu primer test de Cypress
 
-1. Escoge una página para probar. Este ejemplo probará la página de ejemplo `index.astro` de abajo.
+1. Escoge una página para testear. Este ejemplo analizará la página de ejemplo `index.astro` de abajo.
 
     ```html title="src/pages/index.astro"
     ---
@@ -67,7 +67,7 @@ export default defineConfig({
     <html lang="en">
       <head>
         <title>¡Astro es increíble!</title>
-        <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+        <meta name="description" content="Trae contenido desde donde quieras y sírvelo rápidamente con la moderna arquitectura de islas de Astro." />
       </head>
       <body>
       <h1>Hola mundo desde Astro</h1>
@@ -78,14 +78,14 @@ export default defineConfig({
 2. Crea un archivo `index.spec.js` en la carpeta `cypress/e2e`. Usa el siguiente test en el archivo para verificar que el título de la página y el encabezado son correctos.
 
     ```js title="cypress/e2e/index.cy.ts"
-    it('titles are correct', () => {
+    it('los titulos son correctos', () => {
       const page = cy.visit('http://localhost:3000');
-      page.get('title').should('have.text', 'Astro is awesome!')
-      page.get('h1').should('have.text', 'Hello world from Astro');
+      page.get('title').should('have.text', '¡Astro es increíble!')
+      page.get('h1').should('have.text', 'Hola mundo desde Astro');
     });
     ```
 
-    :::tip[establecer un baseUrl]
+    :::tip[establecer una url base]
     Puedes establecer [`"baseUrl": "http://localhost:3000"`](https://docs.cypress.io/guides/end-to-end-testing/testing-your-app#Step-3-Configure-Cypress) en el archivo de configuración `cypress.config.ts` para usar `cy.visit("/")` en lugar de `page.goto("http://localhost:3000/")` para una URL más conveniente.
     :::
 
@@ -111,9 +111,9 @@ Una vez iniciada la App de Cypress, elige **E2E Testing** y luego selecciona el 
 
 Una vez que se haya completado la ejecución del test, deberías ver marcas de verificación verdes en la salida que confirman que tu test pasó:
 
-```shell title="Output from npx cypress run"
+```shell title="Output de npx cypress run"
 Running:  index.cy.ts                                                                     (1 of 1)
-✓ titles are correct (107ms)
+✓ los titulos son correctos (107ms)
 1 passing (1s)
 ```
 
@@ -122,8 +122,8 @@ Para verificar que tu test realmente funciona, puedes cambiar la siguiente líne
 
  ```astro title="src/pages/index.astro" del={2} ins={3}
   <body>
-    <h1>Hello world from Astro</h1>
-    <h1>Hello from Astro</h1>
+    <h1>Hola mundo desde Astro</h1>
+    <h1>Hola desde Astro</h1>
   </body>
 ```
 
@@ -132,7 +132,7 @@ Luego ejecuta el test de nuevo. Deberías ver una "x" roja en la salida que conf
 
 ### Siguientes pasos
 
-Para más información sobre Cypress puedes encontrarla en los siguientes enlaces:
+Para más información sobre Cypress puedes visitar los siguientes enlaces:
 
 - [Introducción a Cypress](https://docs.cypress.io/guides/core-concepts/introduction-to-cypress)
 - [Probando tu aplicación](https://docs.cypress.io/guides/end-to-end-testing/testing-your-app) 
@@ -174,8 +174,8 @@ Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usan
     ---
     <html lang="en">
       <head>
-        <title>Astro is awesome!</title>
-        <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+         <title>¡Astro es increíble!</title>
+        <meta name="description" content="Trae contenido desde donde quieras y sírvelo rápidamente con la moderna arquitectura de islas de Astro." />
       </head>
       <body></body>
     </html>
@@ -183,13 +183,13 @@ Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usan
 
 2. Crea una nueva carpeta y añade el siguiente archivo de test en `src/test`. Copia y pega el siguiente test dentro del archivo para verificar que la meta información de la página es correcta. Actualiza el valor `<title>` de la página para que coincida con la página que se está testeando.
 
-    ```jsx title="src/test/index.spec.ts" "Astro is awesome!"
+    ```jsx title="src/test/index.spec.ts" "¡Astro es increíble!"
     import { test, expect } from '@playwright/test';
 
-    test('meta is correct', async ({ page }) => {
+    test('el titulo es correcto', async ({ page }) => {
       await page.goto("http://localhost:3000/");
 
-      await expect(page).toHaveTitle('Astro is awesome!');
+      await expect(page).toHaveTitle('¡Astro es increíble!');
     });
     ```
 
