--- a/src/content/docs/es/guides/typescript.mdx
+++ b/src/content/docs/es/guides/typescript.mdx
@@ -84,7 +84,7 @@ import Layout from '@layouts/Layout.astro';
 }
 ```
 
-## Extending `window` and `globalThis`
+## Extender `window` y `globalThis`
 
 Es posible que desees agregar una propiedad al objeto global. Puedes hacer esto agregando una declaración global a tu archivo `env.d.ts`:
 
@@ -98,9 +98,9 @@ export {};
 
 Esto proporcionará tipado a `globalThis.myString` y `globalThis.myFunction`, así como a `window.myString` y `window.myFunction`.
 
-Tenga en cuenta que `window` está solo disponible en el código del lado del cliente. `globalThis` está disponible tanto en el lado del servidor como en el lado del cliente, pero su valor del lado del servidor no se compartirá con el cliente.
+Ten en cuenta que `window` sólo está disponible en el código del lado del cliente. `globalThis` está disponible tanto en el lado del servidor como en el lado del cliente, pero su valor del lado del servidor no se compartirá con el cliente.
 
-Si tu solo quieres tipar una propiedad en el objeto `window`, proporciona una interfaz `Window` en su lugar:
+Si sólo quieres tipar una propiedad en el objeto `window`, proporciona una interfaz `Window` en su lugar:
 
 ```ts title="env.d.ts"
 interface Window {
