adding in some extra content from external discussions

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -14,7 +14,7 @@ The new assets experience currently features:
 - Improved error messages and types
 
 :::caution
-Assets are an experimental Astro feature. This API is subject to change before it is marked as stable.
+Assets are an experimental Astro feature introduced in v2.1. This API is subject to change before it is marked as stable.
 :::
 
 ## Enabling Assets in your Project
