update code sample

--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -30,12 +30,12 @@ To create your own local service, you can choose to use the built-in endpoint (`
 import type { LocalImageService } from "astro";
 const service: LocalImageService = {
   getURL(options: ImageTransform) {
-    const src = typeof options.src === "string" ? options.src || options.src.src;
-    return `/my_super_endpoint_that_transforms_images?shref{srcString}&w=${options.width}`;
+    const href = typeof options.src === "string" ? options.src : options.src.src;
+    return `/my_super_endpoint_that_transforms_images?href={href}&w=${options.width}`;
   },
   parseURL(url: URL) {
     return {
-      src: url.searchParams.get("shref),
+      src: url.searchParams.get("href"),
       width: url.searchParams.get("w"),
     };
   },
