--- a/src/content/docs/fr/guides/data-fetching.mdx
+++ b/src/content/docs/fr/guides/data-fetching.mdx
@@ -39,39 +39,33 @@ const randomUser = data.results[0]
 
 Astro peut aussi utiliser `fetch()` pour interroger un serveur GraphQL avec n'importe quelle requête GraphQL valide.
 
-```astro
+```astro title="src/components/Film.astro" "await fetch"
 ---
-const response = await fetch("https://graphql-weather-api.herokuapp.com",
+const response = await fetch("https://swapi-graphql.netlify.app/.netlify/functions/index",
   {
-    method:'POST',
+    method: 'POST',
     headers: {'Content-Type':'application/json'},
     body: JSON.stringify({
       query: `
-        query getWeather($name:String!) {
-            getCityByName(name: $name){
-              name
-              country
-              weather {
-                summary {
-                    description
-                }
-              }
-            }
+        query getFilm ($id:ID!) {
+          film(id: $id) {
+            title
+            releaseDate
           }
-        `,
+        }
+      `,
       variables: {
-          name: "Paris",
+        id: "ZmlsbXM6MQ==",
       },
     }),
-  })
+  });
 
 const json = await response.json();
-const weather = json.data
+const { film } = json.data;
 ---
-
-<h1>Récupération des données météo à l'étape de Build</h1>
-<h2>{weather.getCityByName.name}, {weather.getCityByName.country}</h2>
-<p>Météo Actuelle : {weather.getCityByName.weather.summary.description}</p>
+<h1>Fetching information about Star Wars: A New Hope</h1>
+<h2>Title: {film.title}</h2>
+<p>Year: {film.releaseDate}</p>
 ```
 
 > 💡 N'oubliez pas que toutes les données d'un composant Astro sont récupérées _seulement_ lorsque celui-ci est rendu sur le serveur.
