--- a/src/content/docs/ru/guides/data-fetching.mdx
+++ b/src/content/docs/ru/guides/data-fetching.mdx
@@ -69,38 +69,33 @@ export default Movies;
 
 Astro также может использовать `fetch()` для запроса к GraphQL серверу с любым действительным GraphQL запросом.
 
-```astro title="src/components/Weather.astro" "await fetch"
+```astro title="src/components/Film.astro" "await fetch"
 ---
-const response = await fetch("https://graphql-weather-api.herokuapp.com",
+const response = await fetch("https://swapi-graphql.netlify.app/.netlify/functions/index",
   {
     method: 'POST',
     headers: {'Content-Type':'application/json'},
     body: JSON.stringify({
       query: `
-        query getWeather($name:String!) {
-            getCityByName(name: $name){
-              name
-              country
-              weather {
-                summary {
-                    description
-                }
-              }
-            }
+        query getFilm ($id:ID!) {
+          film(id: $id) {
+            title
+            releaseDate
           }
-        `,
+        }
+      `,
       variables: {
-          name: "Toronto",
+        id: "ZmlsbXM6MQ==",
       },
     }),
   });
 
 const json = await response.json();
-const weather = json.data;
+const { film } = json.data;
 ---
-<h1>Fetching Weather at build time</h1>
-<h2>{weather.getCityByName.name}, {weather.getCityByName.country}</h2>
-<p>Weather: {weather.getCityByName.weather.summary.description}</p>
+<h1>Fetching information about Star Wars: A New Hope</h1>
+<h2>Title: {film.title}</h2>
+<p>Year: {film.releaseDate}</p>
 ```
 
 ## Запросы к Headless CMS
