--- a/src/content/docs/zh-cn/guides/data-fetching.mdx
+++ b/src/content/docs/zh-cn/guides/data-fetching.mdx
@@ -37,38 +37,33 @@ const randomUser = data.results[0]
 
 Astro 也可以使用 `fetch()` 和任一有效的 GraphQL 查询来查询 GraphQL 服务器。
 
-```astro
+```astro title="src/components/Film.astro" "await fetch"
 ---
-const response = await fetch("https://graphql-weather-api.herokuapp.com",
+const response = await fetch("https://swapi-graphql.netlify.app/.netlify/functions/index",
   {
-    method:'POST',
+    method: 'POST',
     headers: {'Content-Type':'application/json'},
     body: JSON.stringify({
       query: `
-        query getWeather($name:String!) {
-            getCityByName(name: $name){
-              name
-              country
-              weather {
-                summary {
-                    description
-                }
-              }
-            }
+        query getFilm ($id:ID!) {
+          film(id: $id) {
+            title
+            releaseDate
           }
-        `,
+        }
+      `,
       variables: {
-          name: "Toronto",
+        id: "ZmlsbXM6MQ==",
       },
     }),
-  })
+  });
 
 const json = await response.json();
-const weather = json.data
+const { film } = json.data;
 ---
-<h1>Fetching Weather at build time</h1>
-<h2>{weather.getCityByName.name}, {weather.getCityByName.country}</h2>
-<p>Weather: {weather.getCityByName.weather.summary.description}</p>
+<h1>Fetching information about Star Wars: A New Hope</h1>
+<h2>Title: {film.title}</h2>
+<p>Year: {film.releaseDate}</p>
 ```
 
 :::note
