--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -83,11 +83,11 @@ export default service;
 
 `getURL(options: ImageTransform): string`
 
-For local services, this hook returns the URL of the endpoint that generates your image (in SSR and dev mode). The local endpoint that `getURL()` points to must call both `parseURL()` and `transform()`.
+For local services, this hook returns the URL of the endpoint that generates your image (in SSR and dev mode). The local endpoint that `getURL()` points to may call both `parseURL()` and `transform()`.
 
 For external services, this hook returns the final URL of the image.
 
-For both services, `options` are the properties passed by the user as attributes of the `<Image />` component or as options to `getImage()`. They are of the following type:
+For both types of services, `options` are the properties passed by the user as attributes of the `<Image />` component or as options to `getImage()`. They are of the following type:
 
 ```ts
 export type ImageTransform = {
@@ -129,7 +129,6 @@ You must return a `format` to ensure that the proper MIME type is served to user
 
 This hook returns all additional attributes used to render the image as HTML, based on the parameters passed by the user (`options`).
 
-{/* 
 ## Hooks
 
 ### `getURL()`
